# Smart-Medication-Adherence-Monitoring-System

./: .env.example  .gitignore  BREADBOARD_LAYOUT_DETAILED.md  BUG_FIXES.md  CODESPACES_SETUP.md  COURSE_REQUIREMENTS_FINAL_CHECK.md  ERROR_CHECK_REPORT.md  ERROR_CHECK_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LED_FIX_EXPLANATION.md  MEDHEALTH_SYSTEM_DOCUMENTATION.html  PDF_INSTRUCTIONS.md  PROFESSOR_FEEDBACK_FIXES.md  PROJECT_PHASE_2_PLAN.md  PROJECT_REVIEW_AGAINST_REQUIREMENTS.md  QUICK_START.md  README.md  README_PHASE_2.md  REQUIREMENTS_VERIFICATION.md  UNFULFILLED_REQUIREMENTS.md  VERIFICATION_CHECKLIST.md  WHY_NOT_ALL_REQUIREMENTS.md  WIRING_GUIDE.md  docker-compose.yml  generate_pdf.py  medhealth_system.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  testoutput.txt
backend copy/: .dockerignore  Dockerfile
backend copy/src/: config.rs  main.rs
backend/src/: config.rs  main.rs
frontend/: index.html
frontend/css/: style.css
frontend/js/: charts.js
ms/: .dockerignore  ALL_REQUIREMENTS_IMPLEMENTED.md  CORRECT_WIRING.md  IMPROVEMENTS_IMPLEMENTED.md  MEDHEALTH_SYSTEM_DOCUMENTATION.md  New Text Document.txt  README.md  REQUIREMENTS_CHECKLIST.md  REQUIREMENTS_REVIEW_UPDATED.md  SETUP_PHASE_2.md  SYSTEM_CONFIRMATION.md  WIRING_VERIFICATION.md  add_sample_data.py  docker-compose.yml  generate_html_pdf.py  requirements.txt
ms/backend/: Cargo.toml
ms/backend/src/database/: mod.rs
ms/backend/src/handlers/: mod.rs  retry.rs
ms/backend/src/models/: mod.rs  tests.rs
scripts/: init-db.sh
(+15 files in other folders)
