[package]
name = "medhealth-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.4"
actix-rt = "2.9"
actix-web-actors = "4.2"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
config = "0.14"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
actix-http-test = "3.2"


